--- a/00-Documentos/00-env/env.yml
+++ b/00-Documentos/00-env/env.yml
@@ -1,9 +1,32 @@
 name: farmacoinformatica
 channels:
-- conda-forge
+  - conda-forge
+  - schrodinger
+  - defaults
 dependencies:
-- smina
-- rdkit
-- py3dmol
-- spyrmsd
-- prody
+  - python=3.8
+  - pip
+  - jupyterlab
+  - jupyter
+  - pandas
+  - numpy
+  - rdkit
+  - pymol
+  - pmw
+  - scikit-learn
+  - scikit-optimize
+  - seaborn
+  - easydict
+  - chembl_webresource_client
+  - biopandas
+  - pypdb
+  - multiprocess
+  - smina
+  - rdkit
+  - py3dmol
+  - spyrmsd
+  - prody
+  - pip:
+    - nbconvert==5.4.1
+    - xgboost
+    - img2pdf
